fix: Remove hardcoded secrets and update CORS for Railway deployment
- Replaced all hardcoded API keys and secrets with secure placeholders
- Enhanced CORS middleware for Railway domain support (.railway.app, .up.railway.app)
- Fixed barber payments page 404 error with working component
- Updated RBAC permissions for payment split endpoints
- Created comprehensive setup guides for secure deployment

No secrets are now committed to repository - all sensitive data must be configured via environment variables.

--- a/backend/payment_testing_dashboard.html
+++ b/backend/payment_testing_dashboard.html
@@ -326,8 +326,10 @@
 
     <script>
         // Configuration
+        // IMPORTANT: Replace with your actual Stripe publishable key
+        // Get it from: https://dashboard.stripe.com/apikeys
         const API_URL = 'http://localhost:8000/api/v1';
-        const STRIPE_PK = 'pk_test_51OUIw0AV7WL65KS1JQnX9W2zWrU2XaGi2QBzPMiFpiXTvrMorSi9zWgcNj7R6cRgEYCbHxVaoklsdM0xvIeyKY1g000LyKZE2b';
+        const STRIPE_PK = 'pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE';
 
         // Initialize Stripe
         const stripe = Stripe(STRIPE_PK);
